@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: Most of the NPO TV Live streams were missing (Fixes #704)
+Fixed: Live TV channels and some video items for NPO did not show (Fixes #756)
 
 [I]Previous Changes[/I]
+Fixed: Most of the NPO TV Live streams were missing (Fixes #704)
 Fixed: NPO Radio channels
 Fixed: NPO changed their URL scheme which broke parsing (Fixed #654)
 Fixed: Some NPO listings were empty due to site changes (Fixes #647)
